# rust_blog

./: .env  Cargo.toml  README.md
migrations/2018-02-13-054038_create_posts/: up.sql
migrations/2018-03-18-140304_create_users/: up.sql
migrations/2018-03-18-195034_create_posts/: up.sql
src/: auth.rs  blog.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs  static_files.rs
src/blocks/: backlight.rs  mod.rs  volume.rs  wifi.rs
static/: 401_Unauthorized.html  404_Not_Found.html  index.html  login.html
templates/: blocked.html.tera  blog.html.tera  login.html.tera  new_blog.html.tera  single_post.html.tera  test.html.tera
