[package]
name = "server"
version = "0.1.0"
authors = ["AntonHermann <antonoehler@gmx.de>"]

[dependencies]
db = { path = "../db" }
rocket = "0.3.6"
rocket_codegen = "0.3.6"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
# lazy_static = "1.0.0"
# diesel_codegen = "0.16.0"
uuid = { version = "0.5", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"

[dependencies.diesel]
version = "1.1.1"
# features = ["postgres", "chrono", "serde_json", "uuid"]
features = ["postgres"]

[dependencies.rocket_contrib]
version = "0.3.6"
default-features = false
features = ["json", "uuid"]
